--- a/www/index.html
+++ b/www/index.html
@@ -258,7 +258,10 @@
 				<div id="small" class="a1" onclick="openURL('http://jazebe.smgroup.ir',false,false);" >
 					<span id="text"><p>بسم الله الرحمن الرحیم</p></span>
 				</div>
-				<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0
+				<br/>0<br/>0<br/>
+				<a href="maps/karbala/index.html">test 1</a><br/><br/>
+				<a href="maps/karbala/mobile.html">test 2</a><br/><br/>
+				<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0
 		</div>
 </body>
 </html>
