--- a/www/index.html
+++ b/www/index.html
@@ -259,8 +259,10 @@
 					<span id="text"><p>بسم الله الرحمن الرحیم</p></span>
 				</div>
 				<br/>0<br/>0<br/>
-				<a href="maps/karbala/index.html">test 1</a><br/><br/>
-				<a href="maps/karbala/mobile.html">test 2</a><br/><br/>
+				<a href="maps/index.html">map</a><br/><br/>
+				<a href="maps/index2.html">map 2</a><br/><br/>
+				<a href="maps/index3.html">map 3</a><br/><br/>
+				<a href="ashura.html">ashura</a><br/><br/>
 				<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0<br/>0
 		</div>
 </body>
