--- a/www/maps/index2.html
+++ b/www/maps/index2.html
@@ -68,13 +68,13 @@ html, body, #map {
 
 	function onSuccess(position) {
 		// your callback here
-		alert("longitude" + position.coords.longitude);
+		alert("longitude : " + position.coords.longitude);
+		alert("altitude : " + position.coords.altitude);
 		
-		var	user_location_icon	= new icon_style_user_location({iconUrl: 'map-icon/user_location.png',iconRetinaUrl: 'map-icon/user_location@2x.png',});
-		
-		var radius = position.coords.accuracy / 2;
-		L.marker([position.coords.longitude, position.coords.altitude], {icon: user_location_icon}).addTo(map).bindPopup("شما در شعاع " + radius + " متری این نقطه هستید");//.openPopup();
-		L.circle([position.coords.longitude, position.coords.altitude], radius).addTo(map);
+		//var user_location_icon	= new icon_style_user_location({iconUrl: 'map-icon/user_location.png',iconRetinaUrl: 'map-icon/user_location@2x.png',});
+		//var radius = position.coords.accuracy / 2;
+		//L.marker([position.coords.longitude, position.coords.altitude], {icon: user_location_icon}).addTo(map).bindPopup("شما در شعاع " + radius + " متری این نقطه هستید");//.openPopup();
+		//L.circle([position.coords.longitude, position.coords.altitude], radius).addTo(map);
 	}
 
 	function onError(error) { 
