--- a/www/maps/index.html
+++ b/www/maps/index.html
@@ -67,8 +67,14 @@ html, body, #map {
 	}
 
 	function onSuccess(position) {
-		// your callback here 
-		map.locate();
+		// your callback here
+		alert("longitude : " + position.coords.longitude);
+		alert("latitude  : " + position.coords.latitude );
+		
+		var user_location_icon	= new icon_style_user_location({iconUrl: 'map-icon/user_location.png',iconRetinaUrl: 'map-icon/user_location@2x.png',});
+		var radius = position.coords.accuracy / 2;
+		L.marker([position.coords.longitude, position.coords.latitude ], {icon: user_location_icon}).addTo(map).bindPopup("شما در شعاع " + radius + " متری این نقطه هستید");//.openPopup();
+		L.circle([position.coords.longitude, position.coords.latitude ], radius).addTo(map);
 	}
 
 	function onError(error) { 
@@ -139,7 +145,7 @@ html, body, #map {
 		zoom: 5,
 	});
 	//map.locate({setView: true, maxZoom: 16});
-	
+	//map.locate();
 /*	
 	L.tileLayer('images/MapQuest/{z}/{x}/{y}.jpg', {
 		maxZoom: 17,
