--- a/www/maps/index.html
+++ b/www/maps/index.html
@@ -68,13 +68,13 @@ html, body, #map {
 
 	function onSuccess(position) {
 		// your callback here
-		alert("longitude : " + position.coords.longitude);
-		alert("latitude  : " + position.coords.latitude );
+		//alert("longitude : " + position.coords.longitude);
+		//alert("latitude  : " + position.coords.latitude );
 		
 		var user_location_icon	= new icon_style_user_location({iconUrl: 'map-icon/user_location.png',iconRetinaUrl: 'map-icon/user_location@2x.png',});
 		var radius = position.coords.accuracy / 2;
-		L.marker([position.coords.longitude, position.coords.latitude ], {icon: user_location_icon}).addTo(map).bindPopup("شما در شعاع " + radius + " متری این نقطه هستید");//.openPopup();
-		L.circle([position.coords.longitude, position.coords.latitude ], radius).addTo(map);
+		L.marker([position.coords.latitude , position.coords.longitude], {icon: user_location_icon}).addTo(map).bindPopup("شما در شعاع " + radius + " متری این نقطه هستید");//.openPopup();
+		L.circle([position.coords.latitude , position.coords.longitude], radius).addTo(map);
 	}
 
 	function onError(error) { 
@@ -186,7 +186,7 @@ html, body, #map {
 	L.control.layers(baseLayers, overlays).addTo(map);
 
 
-	
+	/*
 	function onLocationFound(e) {
 		var radius = e.accuracy / 2;
 		L.marker(e.latlng, {icon: user_location_icon}).addTo(map).bindPopup("شما در شعاع " + radius + " متری این نقطه هستید");//.openPopup();
@@ -199,7 +199,7 @@ html, body, #map {
 
 	map.on('locationfound', onLocationFound);
 	map.on('locationerror', onLocationError);
-	
+	*/
 </script>
 
 </body>
