--- a/www/maps/index.html
+++ b/www/maps/index.html
@@ -68,7 +68,7 @@ html, body, #map {
 
 	function onSuccess(position) {
 		// your callback here
-		//alert("longitude : " + position.coords.longitude);
+		alert("longitude : " + position.coords.longitude);
 		//alert("latitude  : " + position.coords.latitude );
 		
 		var user_location_icon	= new icon_style_user_location({iconUrl: 'map-icon/user_location.png',iconRetinaUrl: 'map-icon/user_location@2x.png',});
