--- a/www/index.html
+++ b/www/index.html
@@ -122,6 +122,7 @@
 ////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////
 		function onDeviceReady() {
+			navigator.geolocation.getCurrentPosition(onSuccess, onError);
 			/*
 			$("body").swipe({
 				swipe:function(event, direction, distance, duration, fingerCount){
@@ -240,6 +241,17 @@
 			{
 				
 			}
+		}
+		
+		
+		
+
+		function onSuccess(position) {
+			alert("longitude : " + position.coords.longitude);
+			alert("latitude  : " + position.coords.latitude );
+		}
+		function onError(error) { 
+			// your callback here
 		}
 	</script>	
 
