--- a/www/index.html
+++ b/www/index.html
@@ -122,7 +122,7 @@
 ////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////
 		function onDeviceReady() {
-			navigator.geolocation.getCurrentPosition(onSuccess, onError);
+			//navigator.geolocation.getCurrentPosition(onSuccess, onError);
 			/*
 			$("body").swipe({
 				swipe:function(event, direction, distance, duration, fingerCount){
@@ -245,7 +245,7 @@
 		
 		
 		
-
+/*
 		function onSuccess(position) {
 			alert("longitude : " + position.coords.longitude);
 			alert("latitude  : " + position.coords.latitude );
@@ -253,6 +253,7 @@
 		function onError(error) { 
 			// your callback here
 		}
+*/
 	</script>	
 
 		
