--- a/www/index.html
+++ b/www/index.html
@@ -246,6 +246,7 @@
 		
 		
 /*
+/////navigator.geolocation.getCurrentPosition
 		function onSuccess(position) {
 			alert("longitude : " + position.coords.longitude);
 			alert("latitude  : " + position.coords.latitude );
@@ -253,6 +254,7 @@
 		function onError(error) { 
 			// your callback here
 		}
+/////navigator.geolocation.getCurrentPosition
 */
 	</script>	
 
