--- a/www/maps/index.html
+++ b/www/maps/index.html
@@ -55,7 +55,7 @@ html, body, #map {
 </style>
 
 <script>
-/*
+
 	function init() {		
 		//console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    start init()');
 		document.addEventListener("deviceready", onDeviceReady, false);
@@ -64,7 +64,7 @@ html, body, #map {
 	}
 	
 	function onDeviceReady() {
-		//navigator.geolocation.getCurrentPosition(onSuccess, onError);     
+		navigator.geolocation.getCurrentPosition(onSuccess, onError);     
 	}
 
 	function onSuccess(position) {
@@ -81,7 +81,7 @@ html, body, #map {
 	function onError(error) { 
 		// your callback here
 	}
-*/
+/**/
 </script>
 
 </head>
