--- a/www/maps/index1.html
+++ b/www/maps/index1.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 <script src="../js/jquery-1.11.0.min.js"></script>
+<script src="../js/console.log.js"></script>
 <script src="../phonegap.js"></script>
 <script src="../js/fastclick.js"></script>
 <script src="../js/back_btn.js"></script>
