--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="css/font.css" />
     
 	<script src="js/jquery-1.11.0.min.js"></script>
-	<script src="js/console.log.js"></script>
+	<!--<script src="js/console.log.js"></script>-->
     <script src="phonegap.js"></script>
     <script src="js/fastclick.js"></script>
     <script src="js/jquery.md5.js"></script>
