--- a/www/index.html
+++ b/www/index.html
@@ -275,7 +275,7 @@
 				</div>
 				<br/>0<br/>0<br/>
 				<a href="maps/index.html">map</a><br/><br/>
-				<a href="maps/index1.html">map1</a><br/><br/>
+				<a href="map.html">map1</a><br/><br/>
 				<a href="ashura.html">ashura</a><br/><br/>
 				<br/>0<br/>0<br/><br/>0<br/>0<br/><br/>0<br/>0<br/><br/>0<br/>0<br/>
 				<br/>0<br/>0<br/><br/>0<br/>0<br/><br/>0<br/>0<br/><br/>0<br/>0<br/>
