--- a/www/index.html
+++ b/www/index.html
@@ -274,8 +274,7 @@
 					<span id="text"><p>بسم الله الرحمن الرحیم</p></span>
 				</div>
 				<br/>0<br/>0<br/>
-				<a href="maps/index.html">map</a><br/><br/>
-				<a href="map.html">map1</a><br/><br/>
+				<a href="map.html">map</a><br/><br/>
 				<a href="ashura.html">ashura</a><br/><br/>
 				<br/>0<br/>0<br/><br/>0<br/>0<br/><br/>0<br/>0<br/><br/>0<br/>0<br/>
 				<br/>0<br/>0<br/><br/>0<br/>0<br/><br/>0<br/>0<br/><br/>0<br/>0<br/>
