--- a/www/map.html
+++ b/www/map.html
@@ -62,30 +62,9 @@ html, body, #map {
 		
 		
 	}
-	
-	function onDeviceReady() {
-		navigator.geolocation.getCurrentPosition(onSuccess, onError);     
-	}
-
-	function onSuccess(position) {
-		//alert("longitude : " + position.coords.longitude);
-		//alert("latitude  : " + position.coords.latitude );
-		var radius = position.coords..accuracy / 2;
-		var my_location_marker = L.marker([position.coords.latitude,position.coords.longitude], {icon: user_location_icon}).addTo(map).bindPopup("شما در شعاع " + radius + " متری این نقطه هستید");//.openPopup();
-		var my_location_circle = L.circle([position.coords.latitude,position.coords.longitude], radius).addTo(map);
-	}
-	
-	function onError(error) { 
-		// your callback here
-	}
-/**/
-</script>
-
-</head>
-<body onload="init();">
-<div id="findbox" style="display:none;"></div>
-<div id="map"></div>
-<script>
+////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////
+// START Map :////////////////////////////////////////////////////////////////
 	var icon_style = L.Icon.extend({
 		options: {
 			iconSize:     [33, 44], // size of the icon
@@ -185,7 +164,7 @@ html, body, #map {
 	L.control.layers(baseLayers, overlays).addTo(map);
 
 
-	/*
+	/**/
 	function onLocationFound(e) {
 		var radius = e.accuracy / 2;
 		L.marker(e.latlng, {icon: user_location_icon}).addTo(map).bindPopup("شما در شعاع " + radius + " متری این نقطه هستید");//.openPopup();
@@ -198,8 +177,32 @@ html, body, #map {
 
 	map.on('locationfound', onLocationFound);
 	map.on('locationerror', onLocationError);
-	*/
+	
+// END Map ///////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////
+	function onDeviceReady() {
+		navigator.geolocation.getCurrentPosition(onSuccess, onError);     
+	}
+
+	function onSuccess(position) {
+		alert("longitude : " + position.coords.longitude);
+		alert("latitude  : " + position.coords.latitude );
+		
+		var radius = position.coords..accuracy / 2;
+		var my_location_marker = L.marker([position.coords.latitude,position.coords.longitude], {icon: user_location_icon}).addTo(map).bindPopup("شما در شعاع " + radius + " متری این نقطه هستید");//.openPopup();
+		var my_location_circle = L.circle([position.coords.latitude,position.coords.longitude], radius).addTo(map);
+	}
+	
+	function onError(error) { 
+		// your callback here
+	}
+/**/
 </script>
 
+</head>
+<body onload="init();">
+<div id="findbox" style="display:none;"></div>
+<div id="map"></div>
 </body>
 </html>
