--- a/www/map.html
+++ b/www/map.html
@@ -55,7 +55,7 @@ html, body, #map {
 </style>
 
 <script>
-	var	user_location_icon	= new icon_style_user_location({iconUrl: 'maps/map-icon/user_location.png',iconRetinaUrl: 'maps/map-icon/user_location@2x.png',});
+	user_location_icon	= new icon_style_user_location({iconUrl: 'maps/map-icon/user_location.png',iconRetinaUrl: 'maps/map-icon/user_location@2x.png',});
 	//var my_location_marker = L.marker([position.coords.latitude,position.coords.longitude], {icon: user_location_icon}).addTo(map).bindPopup("شما در شعاع " + radius + " متری این نقطه هستید");//.openPopup();
 	//var my_location_circle = L.circle([position.coords.latitude,position.coords.longitude], radius).addTo(map);
 
