--- a/www/map.html
+++ b/www/map.html
@@ -55,10 +55,6 @@ html, body, #map {
 </style>
 
 <script>
-	user_location_icon	= new icon_style_user_location({iconUrl: 'maps/map-icon/user_location.png',iconRetinaUrl: 'maps/map-icon/user_location@2x.png',});
-	//var my_location_marker = L.marker([position.coords.latitude,position.coords.longitude], {icon: user_location_icon}).addTo(map).bindPopup("شما در شعاع " + radius + " متری این نقطه هستید");//.openPopup();
-	//var my_location_circle = L.circle([position.coords.latitude,position.coords.longitude], radius).addTo(map);
-
 	function init() {		
 		//console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    start init()');
 		document.addEventListener("deviceready", onDeviceReady, false);
@@ -74,7 +70,7 @@ html, body, #map {
 		alert("longitude : " + position.coords.longitude);
 		//alert("latitude  : " + position.coords.latitude );
 		
-
+		var user_location_icon	= new icon_style_user_location({iconUrl: 'maps/map-icon/user_location.png',iconRetinaUrl: 'maps/map-icon/user_location@2x.png',});
 		var radius = position.coords.accuracy / 2;
 		var my_location_marker = L.marker([position.coords.latitude,position.coords.longitude], {icon: user_location_icon}).addTo(map).bindPopup("شما در شعاع " + radius + " متری این نقطه هستید");//.openPopup();
 		var my_location_circle = L.circle([position.coords.latitude,position.coords.longitude], radius).addTo(map);
@@ -120,7 +116,7 @@ html, body, #map {
 	var favorites_icon		= new icon_style({iconUrl: 'maps/map-icon/blank.png',iconRetinaUrl: 'maps/map-icon/blank@2x.png',});
 	var lost_icon			= new icon_style({iconUrl: 'maps/map-icon/blank.png',iconRetinaUrl: 'maps/map-icon/blank@2x.png',});
 	var console_icon		= new icon_style({iconUrl: 'maps/map-icon/blank.png',iconRetinaUrl: 'maps/map-icon/blank@2x.png',});
-	//var	user_location_icon	= new icon_style_user_location({iconUrl: 'maps/map-icon/user_location.png',iconRetinaUrl: 'maps/map-icon/user_location@2x.png',});
+	var	user_location_icon	= new icon_style_user_location({iconUrl: 'maps/map-icon/user_location.png',iconRetinaUrl: 'maps/map-icon/user_location@2x.png',});
 
 	var ziyarati	= new L.LayerGroup();
 	var bimarestan	= new L.LayerGroup();
@@ -150,6 +146,8 @@ html, body, #map {
 	var map = L.map('map', {
 		center: [32.61618,44.03405],
 		zoom: 5,
+		maxZoom: 7,//17
+		minZoom:4,
 	});
 	//map.locate({setView: true, maxZoom: 16});
 	//map.locate();
