--- a/www/map.html
+++ b/www/map.html
@@ -52,6 +52,34 @@ html, body, #map {
 	float: left;
 	margin-left: -22px;
 }
+.leaflet-control-container .leaflet-top.leaflet-left .leaflet-control-zoom.leaflet-bar.leaflet-control{
+	top:75px;
+}
+#button{
+	position:fixed;
+	top:0;
+	left:0;
+	z-index:999999;
+}
+#back{
+	position:absolute;
+	top:0;
+	left:0;
+	background:red;
+	width:70px;
+	height:30px;
+}
+#add_to_favorites{
+	position:absolute;
+	top:35px;
+	left:0;
+	background:green;
+	width:70px;
+	height:30px;
+}
+#add_to_favorites.disabled{
+	opacity:0.3;
+}
 </style>
 
 <script>
@@ -61,7 +89,7 @@ html, body, #map {
 		document.addEventListener("deviceready", onDeviceReady, false);
 		
 		radius = 0;
-		my_location_marker = L.marker([36.2879,59.6157], {icon: user_location_icon,setZIndexOffset: 1000}).addTo(map);
+		my_location_marker = L.marker([36.2879,59.6157], {icon: user_location_icon,setZIndexOffset: 999}).addTo(map);
 		my_location_circle = L.circle([36.2879,59.6157], radius).addTo(map);
 	}
 
@@ -71,9 +99,14 @@ html, body, #map {
 			setTimeout(arguments.callee, 8000);
 		})();
 	}
-
+	function add_to_favorites() {
+		//alert("786");
+		$("#add_to_favorites").addClass("disabled");
+		new_favorite_marker_icon	= new icon_style_favorites_new({iconUrl: 'maps/map-icon/marker-icon.png',iconRetinaUrl: 'maps/map-icon/marker-icon@2x.png',shadowUrl: 'maps/map-icon/marker-shadow.png',});
+		new_favorite_marker = L.marker(map.getCenter(), {icon: new_favorite_marker_icon,setZIndexOffset: 1000,draggable:true}).addTo(map).bindPopup("لطفا این مارکر را در موقعیت دلخواه قرار دهید.").openPopup();
+	}
 	function onSuccess(position) {
-		alert("longitude : " + position.coords.longitude);
+		//alert("longitude : " + position.coords.longitude);
 		//alert("latitude  : " + position.coords.latitude );
 		
 		user_location_icon	= new icon_style_user_location({iconUrl: 'maps/map-icon/user_location.png',iconRetinaUrl: 'maps/map-icon/user_location@2x.png',});
@@ -98,8 +131,12 @@ html, body, #map {
 
 </head>
 <body onload="init();">
-<div id="findbox" style="display:none;"></div>
-<div id="map"></div>
+	<div id="findbox" style="display:none;"></div>
+	<div id="button">
+		<div id="back" onclick="parent.history.back();"></div>
+		<div id="add_to_favorites" onclick="add_to_favorites();"></div>
+	</div>
+	<div id="map"></div>
 <script>
 ////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////
@@ -109,6 +146,15 @@ html, body, #map {
 			iconSize:     [33, 44], // size of the icon
 			iconAnchor:   [16,44], // point of the icon which will correspond to marker's location
 			popupAnchor:  [0, -44] // point from which the popup should open relative to the iconAnchor
+		}
+	});
+	var icon_style_favorites_new = L.Icon.extend({
+		options: {
+			iconSize:     [25, 41], // size of the icon
+			iconAnchor:   [12,41], // point of the icon which will correspond to marker's location
+			popupAnchor:  [0, -41], // point from which the popup should open relative to the iconAnchor
+			shadowSize:   [41, 41],
+			shadowAnchor: [11, 39]
 		}
 	});
 	var icon_style_user_location = L.Icon.extend({
@@ -159,8 +205,8 @@ html, body, #map {
 
 	var map = L.map('map', {
 		center: [32.61618,44.03405],
-		zoom: 13,
-		maxZoom: 5,//17
+		zoom: 5,
+		maxZoom: 16,//17
 		minZoom:1,
 	});
 	//map.locate({setView: true, maxZoom: 16});
@@ -203,7 +249,6 @@ html, body, #map {
 	};
 
 	L.control.layers(baseLayers, overlays).addTo(map);
-
 
 	/*
 	function onLocationFound(e) {
