--- a/www/index.html
+++ b/www/index.html
@@ -265,19 +265,88 @@
 </head>
 <body onload="init();">
 		<div class="container " id="container" >
-				<div id="ajax" class="mypreload">
-					<div style="z-index: 1000; border: medium none; margin: 0px; padding: 0px; width: 100%; height: 100%; top: 0px; left: 0px; background-color: #f0f0f0; opacity: 1; cursor: default; position: fixed;overflow:visible;" class="blockUI blockOverlay"></div>
-					<div style="z-index: 1011; position: fixed; padding: 0px; margin: 0px; width: 100%; top: 28%; left: 0%; text-align: center;border: medium none;overflow:visible;" class="blockUI blockMsg blockPage"><img src="images/preloader.gif"></div>
-					<div style="z-index: 1012; position: fixed; padding: 0px; margin: 0px; width: 100%; top: 50%; left: 0%; text-align: center;border: medium none;overflow:visible;height:500px;" class="blockUI blockMsg blockPage"><img src="images/loading.png" width="70%"></div>
-				</div>
-				<div id="small" class="a1" onclick="openURL('http://jazebe.smgroup.ir',false,false);" >
-					<span id="text"><p>بسم الله الرحمن الرحیم</p></span>
-				</div>
-				<br/>0<br/>0<br/>
-				<a href="map.html">map</a><br/><br/>
-				<a href="ashura.html">ashura</a><br/><br/>
-				<br/>0<br/>0<br/><br/>0<br/>0<br/><br/>0<br/>0<br/><br/>0<br/>0<br/>
-				<br/>0<br/>0<br/><br/>0<br/>0<br/><br/>0<br/>0<br/><br/>0<br/>0<br/>
+			<div id="ajax" class="mypreload">
+				<div style="z-index: 1000; border: medium none; margin: 0px; padding: 0px; width: 100%; height: 100%; top: 0px; left: 0px; background-color: #f0f0f0; opacity: 1; cursor: default; position: fixed;overflow:visible;" class="blockUI blockOverlay"></div>
+				<div style="z-index: 1011; position: fixed; padding: 0px; margin: 0px; width: 100%; top: 28%; left: 0%; text-align: center;border: medium none;overflow:visible;" class="blockUI blockMsg blockPage"><img src="images/preloader.gif"></div>
+				<div style="z-index: 1012; position: fixed; padding: 0px; margin: 0px; width: 100%; top: 50%; left: 0%; text-align: center;border: medium none;overflow:visible;height:500px;" class="blockUI blockMsg blockPage"><img src="images/loading.png" width="70%"></div>
+			</div>
+			<div id="small" class="a1" onclick="openURL('http://jazebe.smgroup.ir',false,false);" >
+				<span id="text"><p>بسم الله الرحمن الرحیم</p></span>
+			</div>
+			<br/>0<br/>0<br/>
+			<a href="map.html">map</a><br/><br/>
+			<a href="ashura.html">ashura</a><br/><br/>
+			<div onclick='navigator.notification.prompt("message", promptCallback, "title", ["OK","Cancel"], "defaultText");'>prompt</div><br/><br/>
+			<div onclick='showPrompt();'>showPrompt()</div><br/><br/>
+			<div onclick='showConfirm();'>showConfirm()</div><br/><br/>
+			<div onclick='showAlert();'>showAlert()</div><br/><br/>
+			<br/>0<br/>0<br/><br/>0<br/>0<br/><br/>0<br/>0<br/><br/>0<br/>0<br/>
+<script>
+function promptCallback() {
+
+}
+function showPrompt() {
+    navigator.notification.prompt(
+        'Please enter your name',  // message
+        onPrompt,                  // callback to invoke
+        'Registration',            // title
+        ['Ok','Exit'],             // buttonLabels
+        'Jane Doe'                 // defaultText
+    );
+}
+function onPrompt(results) {
+    alert("You selected button number " + results.buttonIndex + " and entered " + results.input1);
+}
+
+
+
+
+
+
+// process the confirmation dialog result
+function onConfirm(buttonIndex) {
+    alert('You selected button ' + buttonIndex);
+}
+
+// Show a custom confirmation dialog
+//
+function showConfirm() {
+    navigator.notification.confirm(
+        'You are the winner!', // message
+         onConfirm,            // callback to invoke with index of button pressed
+        'Game Over',           // title
+        ['Restart','Exit']         // buttonLabels
+    );
+}
+
+
+
+
+
+
+
+
+
+
+
+// alert dialog dismissed
+function alertDismissed() {
+	// do something
+}
+
+// Show a custom alertDismissed
+//
+function showAlert() {
+	navigator.notification.alert(
+		'You are the winner!',  // message
+		alertDismissed,         // callback
+		'Game Over',            // title
+		'Done'                  // buttonName
+	);
+}
+
+
+</script>
 		</div>
 </body>
 </html>
