--- a/www/map.html
+++ b/www/map.html
@@ -77,6 +77,8 @@
 		$(".cd-popup").removeClass("is-visible");
 		$("#add_to_favorites").removeClass("disabled");
 	}
+//////////////////////////////////////////////////
+//////share location//////////////////////////////
 	function share_location() {
 		navigator.notification.confirm(
 			'لطفا گزینه مورد نظر را انتخاب نمایید', // message
@@ -84,28 +86,45 @@
 			'اشتراک گذاری موقعیت',           // title
 			['میخواهم موقعیت خود را ارسال کنم','دوستم موقعیت خود را برای من ارسال کرده است','لغو درخواست']         // buttonLabels
 		);
-		function onConfirm1th(buttonIndex) {
-			if(buttonIndex==1)
-			{//send
-				alert("sms:?body=latlong:" + my_location_marker.getLatLng() + "---");
-				window.location.href = "sms:?body=latlong:" + my_location_marker.getLatLng() + "---";
-			}
-			else if(buttonIndex==2)
-			{//recive
-				navigator.notification.prompt(
-					'لطفا متن پیامکی که سامانه برای شما ارسال کرده است را وارد نمایید',  // message
-					onPrompt,                  // callback to invoke
-					'موقعیت مخاطب',            // title
-					['ثبت','لغو درخواست'],             // buttonLabels
-					''                 // defaultText
-				);
-				function onPrompt(results) {
-					alert("You selected button number " + results.buttonIndex + " and entered " + results.input1);
-				}
-			}
+	}
+	function onConfirm(buttonIndex) {
+		if(buttonIndex==1)
+		{//send
+			alert("sms:?body=latlong:" + my_location_marker.getLatLng() + "---");
+			window.location.href = "sms:?body=latlong:" + my_location_marker.getLatLng() + "---";
+		}
+		else if(buttonIndex==2)
+		{//recive
+			navigator.notification.prompt(
+				'لطفا متن پیامکی که سامانه برای شما ارسال کرده است را وارد نمایید',  // message
+				onPrompt,                  // callback to invoke
+				'موقعیت مخاطب',            // title
+				['ثبت','لغو درخواست'],             // buttonLabels
+				''                 // defaultText
+			);
 		}
 	}
-
+	function onPrompt(results) {
+		alert("You selected button number " + results.buttonIndex + " and entered " + results.input1);
+	}
+//////share location//////////////////////////////
+//////////////////////////////////////////////////
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 	function onSuccess(position) {
 		//alert("longitude : " + position.coords.longitude);
 		//alert("latitude  : " + position.coords.latitude );
