--- a/www/map.html
+++ b/www/map.html
@@ -91,7 +91,7 @@
 		if(buttonIndex==1)
 		{//send
 			alert("sms:?body=" + my_location_marker.getLatLng());
-			window.location.href = "sms:/**/;body=" + my_location_marker.getLatLng();
+			window.location.href = "sms:0915?body=lll" + my_location_marker.getLatLng();
 		}
 		else if(buttonIndex==2)
 		{//recive
