--- a/www/map.html
+++ b/www/map.html
@@ -93,7 +93,19 @@
 		if(buttonIndex==1)
 		{//send
 			//alert("sms:?body=" + my_location_marker.getLatLng());
-			window.location.href = "sms:&body=" + my_location_marker.getLatLng();
+			if(my_location_marker.getLatLng().lat != 36.2879)
+			{
+				window.location.href = "sms:&body=" + my_location_marker.getLatLng();
+			}
+			else
+			{
+				navigator.notification.alert(
+					'متاسفانه دستگاه موقعیت جغرافیایی شما پیدا نکرده است.\nلطفا دقایقی دیگر، مجددا تلاش نمایید.',  // message
+					alertDismissed,         // callback
+					'اخطار',            // title
+					'تائید'                  // buttonName
+				);
+			}
 		}
 		else if(buttonIndex==2)
 		{//recive
@@ -127,6 +139,16 @@
 			latlong = results.input1.trim().replace(" ","").replace("LatLng(","").replace("latlng(","").replace(")","").split(",");
 			my_location_marker_friend.setLatLng([latlong[0],latlong[1]]);
 			my_location_marker_friend.openPopup();
+			
+			if(my_location_marker.getLatLng().lat != 36.2879)
+			{
+				navigator.notification.alert(
+					'موقعیت دوست شما در نقشه ثبت شد.\nفاصله تقریبی شما با دوستتان ' +  Math.round(distance(my_location_marker.getLatLng().lat, my_location_marker.getLatLng().lng, my_location_marker_friend.getLatLng().lat, my_location_marker_friend.getLatLng().lng, "M")) + " متر می باشد.",  // message
+					alertDismissed,         // callback
+					'اطلاعیه',            // title
+					'تائید'                  // buttonName
+				);
+			}
 		}
 		else
 		{
@@ -140,6 +162,22 @@
 	}
 	function alertDismissed() {
 		// do something
+	}
+	function distance(lat1, lon1, lat2, lon2, unit) {
+		var radlat1 = Math.PI * lat1/180
+		var radlat2 = Math.PI * lat2/180
+		var radlon1 = Math.PI * lon1/180
+		var radlon2 = Math.PI * lon2/180
+		var theta = lon1-lon2
+		var radtheta = Math.PI * theta/180
+		var dist = Math.sin(radlat1) * Math.sin(radlat2) + Math.cos(radlat1) * Math.cos(radlat2) * Math.cos(radtheta);
+		dist = Math.acos(dist)
+		dist = dist * 180/Math.PI
+		dist = dist * 60 * 1.1515
+		if (unit=="K") { dist = dist * 1.609344 }
+		if (unit=="M") { dist = dist * 1.609344 * 1000 }
+		if (unit=="N") { dist = dist * 0.8684 }
+		return dist
 	}
 //////share location//////////////////////////////
 //////////////////////////////////////////////////
